--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev":"nodemon src/index.js"
+    "dev": "nodemon src/index.js"
   },
-  "dependencies": {
+  "devdependencies": {
     "nodemon": "^3.1.11"
+  },
+  "devDependencies": {
+    "prettier": "^3.7.2"
   }
-
 }
